--- a/index.html
+++ b/index.html
@@ -63,9 +63,10 @@
 <li><a href="07-github.html">Remotes in GitHub</a></li>
 <li><a href="08-collab.html">Collaborating</a></li>
 <li><a href="09-conflict.html">Conflicts</a></li>
-<li><a href="10-open.html">Open Science</a></li>
-<li><a href="11-licensing.html">Licensing</a></li>
-<li><a href="12-hosting.html">Hosting</a></li>
+<li><a href="10-branching.html">Branching</a></li>
+<li><a href="11-open.html">Open Science</a></li>
+<li><a href="12-licensing.html">Licensing</a></li>
+<li><a href="13-hosting.html">Hosting</a></li>
 </ol>
 <h2 id="other-resources">Other Resources</h2>
 <ul>
