--- a/reference.html
+++ b/reference.html
@@ -69,23 +69,32 @@
 <li>Conflicts occur when two or more people change the same file(s) at the same time.</li>
 <li>The version control system does not allow people to blindly overwrite each other’s changes. Instead, it highlights conflicts so that they can be resolved.</li>
 </ul>
-<h2 id="open-science"><a href="10-open.html">Open Science</a></h2>
+<h2 id="branching"><a href="10-branching.html">Branching</a></h2>
+<ul>
+<li>Branching allows you to maintain several parallel sets of code so that you can test features on one set, while maintaining the original versions.<br />
+</li>
+<li><code>git branch</code> followed by a name will allow you to set up a branch in the current repository</li>
+</ul>
+<h2 id="open-science"><a href="11-open.html">Open Science</a></h2>
 <ul>
 <li>Open scientific work is more useful and more highly cited than closed.</li>
 </ul>
-<h2 id="licensing"><a href="11-licensing.html">Licensing</a></h2>
+<h2 id="licensing"><a href="12-licensing.html">Licensing</a></h2>
 <ul>
 <li>People who incorporate GPL’d software into their own software must make their software also open under the GPL license; most other open licenses do not require this.</li>
 <li>The Creative Commons family of licenses allow people to mix and match requirements and restrictions on attribution, creation of derivative works, further sharing, and commercialization.</li>
 <li>People who are not lawyers should not try to write licenses from scratch.</li>
 </ul>
-<h2 id="hosting"><a href="12-hosting.html">Hosting</a></h2>
+<h2 id="hosting"><a href="13-hosting.html">Hosting</a></h2>
 <ul>
 <li>Projects can be hosted on university servers, on personal domains, or on public forges.</li>
 <li>Rules regarding intellectual property and storage of sensitive information apply no matter where code and data are hosted.</li>
 </ul>
 <h2 id="glossary">Glossary</h2>
 <dl>
+<dt><span id="branch">branch</span></dt>
+<dd>A parallel instance of files in a repository
+</dd>
 <dt><span id="change-set">change set</span></dt>
 <dd>A group of changes to one or more files that are or will be added to a single <a href="#commit">commit</a> in a <a href="#version-control">version control</a> <a href="#repository">repository</a>.
 </dd>
@@ -119,6 +128,9 @@
 <dt><span id="revision">revision</span></dt>
 <dd>A recorded <a href="#change-set">change set</a> of a <a href="#version-control">version control</a> <a href="#repository">repository</a>. The same as a <a href="#commit">commit</a>.
 </dd>
+<dt><span id="sha-1">SHA-1</span></dt>
+<dd><a href="http://en.wikipedia.org/wiki/SHA-1">SHA-1 hashes</a> is what Git uses to compute identifiers, including for commits. To compute these, Git uses not only the actual change of a commit, but also its metadata (such as date, author, message), including the identifiers of all commits of preceding changes. This makes Git commit IDs virtually unique. I.e., the likelihood that two commits made independently, even of the same change, receive the same ID is exceedingly small.
+</dd>
 <dt><span id="ssh">SSH</span></dt>
 <dd>The Secure Shell <a href="#protocol">protocol</a> used for secure communication between computers.
 </dd>
@@ -134,7 +146,7 @@
       </article>
       <div class="footer">
         <a class="label swc-blue-bg" href="http://software-carpentry.org">Software Carpentry</a>
-        <a class="label swc-blue-bg" href="https://github.com/swcarpentry/git-novice">Source</a>
+        <a class="label swc-blue-bg" href="https://github.com/swcarpentry/lesson-template">Source</a>
         <a class="label swc-blue-bg" href="mailto:admin@software-carpentry.org">Contact</a>
         <a class="label swc-blue-bg" href="LICENSE.html">License</a>
       </div>
