fixed exercise formatting

--- a/10-branching.html
+++ b/10-branching.html
@@ -116,12 +116,10 @@ To https://github.com/erdavenport/planets.git
 <h2 id="creating-and-merging-branches"><span class="glyphicon glyphicon-pencil"></span>Creating and Merging Branches</h2>
 </div>
 <div class="panel-body">
-<p>In your <code>bio</code> repository you made earlier, do the following:</p>
-<ol style="list-style-type: decimal">
-<li><p>Create a branch called <code>grad_school</code></p></li>
-<li><p>Create a file called <code>thesis</code> and write one line about your research (or something about science if you don’t know what you’ll be researching yet)</p></li>
-<li><p>Merge those changes back to the master branch of <code>bio</code>.</p></li>
-</ol>
+<p>In your <code>bio</code> repository you made earlier, do the following:<br />
+1. Create a branch called <code>grad_school</code><br />
+2. Create a file called <code>thesis</code> and write one line about your research (or something about science if you don’t know what you’ll be researching yet)<br />
+3. Merge those changes back to the master branch of <code>bio</code>.</p>
 </div>
 </section>
         </div>
