--- a/index.html
+++ b/index.html
@@ -64,9 +64,10 @@
 <li><a href="08-collab.html">Collaborating</a></li>
 <li><a href="09-conflict.html">Conflicts</a></li>
 <li><a href="10-branching.html">Branching</a></li>
-<li><a href="11-open.html">Open Science</a></li>
-<li><a href="12-licensing.html">Licensing</a></li>
-<li><a href="13-hosting.html">Hosting</a></li>
+<li><a href="11-contributing.html">Contributing</a></li>
+<li><a href="12-open.html">Open Science</a></li>
+<li><a href="13-licensing.html">Licensing</a></li>
+<li><a href="14-hosting.html">Hosting</a></li>
 </ol>
 <h2 id="other-resources">Other Resources</h2>
 <ul>
