updated to add contributing info

--- a/reference.html
+++ b/reference.html
@@ -75,17 +75,23 @@
 </li>
 <li><code>git branch</code> followed by a name will allow you to set up a branch in the current repository</li>
 </ul>
-<h2 id="open-science"><a href="11-open.html">Open Science</a></h2>
+<h2 id="contributing"><a href="11-contributing.html">Contributing</a></h2>
+<ul>
+<li>GitHub’s pull request system is a way for an owner of a repository to control what edits are incorporated from users not designated as collaborators on GitHub for a particular repository.<br />
+</li>
+<li>Users wishing to contribute to an existing project should fork the project on GitHub, clone the forked repository locally, make changes and commit, push commits to their GitHub page, and then issue a pull request to the owner of the repository.</li>
+</ul>
+<h2 id="open-science"><a href="12-open.html">Open Science</a></h2>
 <ul>
 <li>Open scientific work is more useful and more highly cited than closed.</li>
 </ul>
-<h2 id="licensing"><a href="12-licensing.html">Licensing</a></h2>
+<h2 id="licensing"><a href="13-licensing.html">Licensing</a></h2>
 <ul>
 <li>People who incorporate GPL’d software into their own software must make their software also open under the GPL license; most other open licenses do not require this.</li>
 <li>The Creative Commons family of licenses allow people to mix and match requirements and restrictions on attribution, creation of derivative works, further sharing, and commercialization.</li>
 <li>People who are not lawyers should not try to write licenses from scratch.</li>
 </ul>
-<h2 id="hosting"><a href="13-hosting.html">Hosting</a></h2>
+<h2 id="hosting"><a href="14-hosting.html">Hosting</a></h2>
 <ul>
 <li>Projects can be hosted on university servers, on personal domains, or on public forges.</li>
 <li>Rules regarding intellectual property and storage of sensitive information apply no matter where code and data are hosted.</li>
